<resources>
    <string name="app_name">Hello World</string>

    <!-- 主界面 -->
    <string name="btn_list_lab1">Lab1</string>
    <string name="btn_list_lab2_1">Lab2-1</string>
    <string name="btn_list_lab2_2">Lab2-2</string>
    <string name="btn_list_Simple">Simple</string>
    <string name="btn_list_Base">Base</string>
    <string name="btn_list_Chat">Chat</string>
    <string name="btn_list_lab3">lab3</string>
    <string name="btn_list_lab4">lab4</string>
    <string name="btn_list_lab5">lab5</string>
    <string name="btn_list_lab6">lab6</string>
    <string name="btn_list_lab7">lab7</string>
    <string name="btn_list_lab8">lab8</string>
    <string name="btn_list_lab9">lab9</string>
    <string name="btn_list_lab10">lab10</string>
    <string name="btn_list_lab11">lab11</string>
    <string name="btn_list_lab12">lab12</string>

    <string name="btn_list_delete">删除数据库</string>

    <!-- 登陆界面文字 -->
    <string name="tx_input">please input:</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>

    <!-- 注册界面文字 -->
    <string name="tx_register_title">Register Page</string>
    <string name="tx_register_username">用户名:</string>
    <string name="tx_register_password">密码:</string>
    <string name="tx_register_age">年龄:</string>
    <string name="tx_register_birthday">生日:</string>
    <string name="tx_register_phone">电话:</string>

    <string name="hint_register_username">请输入用户名</string>
    <string name="hint_register_password">请输入密码</string>
    <string name="hint_register_age">请输入年龄</string>
    <string name="hint_register_birthday">请输入生日</string>
    <string name="hint_register_phone">请输入电话号码</string>

    <!-- 计算界面 -->
    <string name="tx_calculate_title">Calculate Page</string>
    <string name="tx_calculate_username">用户名:</string>
    <string name="tx_calculate_password">密码:</string>
    <string name="tx_calculate_height">身高(m):</string>
    <string name="tx_calculate_weight">体重(kg):</string>
    <string name="btn_calculate_calc">计算</string>
    <string name="btn_calculate_test">测试按钮</string>
    <string name="btn_calculate_reset">重置</string>

    <!-- 按钮下拉菜单 -->
    <string name="rb_button_boy">男</string>
    <string name="rb_button_girl">女</string>
    <string name="cb_button_math">数学</string>
    <string name="cb_button_chinese">语文</string>
    <string name="cb_button_english">英语</string>
    <string name="tb_button_open_off">滋不滋磁</string>
    <string name="tb_button_open_on">滋磁</string>

    <!-- dialog -->
    <string name="btn_dialog_simple">Simple dialog</string>
    <string name="btn_dialog_complex">Complex dialog</string>
    <string name="btn_dialog_tp">TPDialog</string>
    <string name="btn_dialog_see">可视</string>
    <string name="btn_dialog_add">Add</string>
    <string name="btn_dialog_reduce">Reduce</string>

    <!-- Lab4 -->
    <string name="tx_phone_number">号  码:</string>
    <string name="btn_phone_call">拨打电话</string>
    <string name="tx_phone_username">用户名:</string>
    <string name="tx_phone_password">密  码:</string>
    <string name="btn_phone_log1">登陆1</string>
    <string name="btn_phone_log2">登陆2</string>

    <!-- Menu -->
    <string name="btn_menu_popupmenu">Popupmenu</string>
    <string name="btn_menu_menu">menu</string>
    <string name="menu_item_red">red</string>
    <string name="menu_item_blue">blue</string>
    <string name="menu_item_green">green</string>
    <string name="menu_item_check1">check1</string>
    <string name="menu_item_check2">check2</string>
    <string name="menu_item_check3">check3</string>
    <string name="menu_item_color">color</string>

    <!-- ServiceActivity -->
    <string name="btn_service_open_update">打开更新服务</string>
    <string name="btn_service_close_update">关闭更新服务</string>
    <string name="btn_service_open_music">打开音乐服务</string>
    <string name="btn_service_close_music">关闭音乐按钮</string>
    <!-- page -->
    <string name="btn_page_physical">Load Fragment</string>

    <!-- multithread -->
    <string name="btn_simple_thread">SimpleThread</string>
    <string name="btn_multi_thread">MultiThread</string>
    <string name="btn_end_thread">EndThread</string>
    <string name="btn_thread_1">1</string>
    <string name="btn_thread_5">5</string>
    <string name="btn_thread_10">10</string>
    <string name="btn_thread_download">download</string>

    <!-- Http -->

</resources>