<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:columnCount="4"
            android:fitsSystemWindows="true"
            android:orientation="horizontal"
            android:rowCount="3">

    <Button
        android:id="@+id/btn_list_lab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_list_lab1"/>

    <Button
        android:id="@+id/btn_list_lab2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_list_lab2_1"/>

    <Button
        android:id="@+id/btn_list_lab2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_list_lab2_2"/>

    <Button
        android:id="@+id/btn_list_view_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_list_Simple"/>

    <Button
        android:id="@+id/btn_list_view_Base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_list_Base"/>

    <Button
        android:id="@+id/btn_list_view_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_list_Chat"/>

    <Button
        android:id="@+id/btn_list_lab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_list_lab3"/>

    <Button
        android:id="@+id/btn_list_lab4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_list_lab4"/>

    <Button
        android:id="@+id/btn_list_lab5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_list_lab5"/>

    <Button
        android:id="@+id/btn_list_lab7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_list_lab7"/>

    <Button
        android:id="@+id/btn_list_lab7_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_list_lab7_3"/>

    <Button
        android:id="@+id/btn_list_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="3"
        android:gravity="center"
        android:text="@string/btn_list_delete"/>


</GridLayout>