<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Button
        android:id="@+id/btn_service_open_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_service_open_update"/>

    <Button
        android:id="@+id/btn_service_close_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_service_close_update"/>

    <Button
        android:id="@+id/btn_service_open_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_service_open_music"/>

    <Button
        android:id="@+id/btn_service_close_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_service_close_music"/>
</LinearLayout>