<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              android:background="@color/colorBackground">

    <Spinner
        android:id="@+id/spn_button_provinces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spn_button_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spn_button_areas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/group_button_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_button_boy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_button_boy"/>
        <RadioButton
            android:id="@+id/rb_button_girl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_button_girl"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cb_button_math"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_button_math"/>
        <CheckBox
            android:id="@+id/cb_button_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_button_chinese"/>
        <CheckBox
            android:id="@+id/cb_button_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_button_english"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_button_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/btn_press"
        android:layout_gravity="center"/>
    <ToggleButton
        android:id="@+id/tb_button_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_gravity="center"
        android:textOff="@string/tb_button_open_off"
        android:textOn="@string/tb_button_open_on" />
</LinearLayout>
