<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_simple_thread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_simple_thread"/>

        <Button
            android:id="@+id/btn_multi_thread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_multi_thread"/>

        <Button
            android:id="@+id/btn_end_thread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_end_thread"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_simple_thread"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_multi_thread"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <EditText
        android:id="@+id/et_thread_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_thread_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_thread_5"/>

    <Button
        android:id="@+id/btn_thread_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_thread_10"/>

    <Button
        android:id="@+id/btn_thread_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_thread_1"/>
    <ProgressBar
        android:id="@+id/pb_thread_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_gravity="center_horizontal"
        style="@android:style/Widget.ProgressBar.Horizontal"/>

    <Button
        android:id="@+id/btn_thread_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_thread_download"/>

    <TextView
        android:id="@+id/tv_thread_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>