<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              android:background="@color/colorBackground">
    <!--使用drawableLeft 在textview 左边放图片 不需要一个水平的线性布局 2个组件
    不知道如何修改位置 只能通过padding 通过setCompoundDrawables动态修改-->
    <TextView
        android:id="@+id/tx_register_title"
        android:text="@string/tx_calculate_title"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawablePadding="10dp"
        android:gravity="center"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:fitsSystemWindows="true"
                  android:orientation="horizontal">

        <TextView
            android:id="@+id/tx_calculate_username"
            android:text="@string/tx_calculate_username"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_calculate_username"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:fitsSystemWindows="true"
                  android:orientation="horizontal">

        <TextView
            android:id="@+id/tx_calculate_password"
            android:text="@string/tx_calculate_password"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_calculate_password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:fitsSystemWindows="true"
                  android:orientation="horizontal">

        <TextView
            android:id="@+id/tx_calculate_height"
            android:text="@string/tx_calculate_height"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_calculate_height"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:fitsSystemWindows="true"
                  android:orientation="horizontal">

        <TextView
            android:id="@+id/tx_calculate_weight"
            android:text="@string/tx_calculate_weight"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_calculate_weight"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_calculate_calc"
            android:text="@string/btn_calculate_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_calculate_reset"
            android:text="@string/btn_calculate_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_calculate_test"
        android:text="@string/btn_calculate_test"
        android:background="@drawable/imgbtn_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />
</LinearLayout>