<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tv_input"
        android:text="@string/tx_input"
        android:textSize="65px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ed_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!-- 线性布局 若为水平不能设置 layout_gravity 为 left end
         竖直则不能竖直方向 因为不知道哪个在最右边-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=" "
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_register"
            android:text="@string/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_login"
            android:text="@string/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"/>

    </LinearLayout>
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical">-->
    <!--<Button-->
    <!--android:text="@string/btn_register"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="right"-->
    <!--android:gravity="center"/>-->
    <!--</LinearLayout>-->

</LinearLayout>